<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">MVC</string>
    <string name="app_name_ex">MachineVision</string>
    <string name="edit_addqdiag_title">Enter query</string>
    <string name="edit_addqdiag_hint">Cactus</string>
    <string name="main_menu_chip">Change server IP</string>
    <string name="query_more">Show more</string>
    <string name="edit_deleted">File added to false-list</string>
    <string name="edit_del_undo">UNDO</string>
    <string name="edit_nores">This query has no results</string>
    <string name="edit_err_title_void">Please enter title</string>
    <string name="edit_saved">Saved.</string>
    <string name="edit_save">Save Object?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_setrtc">Count to get</string>
    <string name="edit_title">Title</string>
    <string name="artobj_status_undefined">UNDEFINED</string>
    <string name="artobj_status_rtl">Ready to train</string>
    <string name="artobj_status_dl">Downloading imgs</string>
    <string name="artobj_status_lrn">Training</string>
    <string name="artobj_status_rfu">Ready</string>
    <string name="artobj_status_odt">Outdated</string>
    <string name="artobj_status_errl">Training error</string>
    <string name="artobj_status_err">Error</string>
    <string name="artobj_edited">Edited %s</string>
    <string name="query_deletediag">Are You sure?</string>
    <string name="query_alrex">Such query already exists</string>
    <string name="edit_thumb_set">This image was set as a thumbnail</string>
    <string name="main_obj_meta">%d Queries%s</string>
    <string name="main_obj_bl">%d Blacklisted</string>
    <string name="main_op_status">Status:</string>
    <string name="main_op_queries">Queries:</string>
    <string name="main_op_total">Total Images:</string>
    <string name="main_op_unknown">Unknown</string>
    <string name="main_op_created">Created:</string>
    <string name="main_op_learned">Trained:</string>
    <string name="main_op_edit">Edit</string>
    <string name="main_op_delete">Delete</string>
    <string name="blank" />
    <string name="artobj_learned">Learned %s</string>
    <string name="artobj_created">Created %s</string>
    <string name="main_menu_change">Change IP</string>
    <string name="main_svst">Server State</string>
    <string name="edit_err_adapter_missing">Error: Missing adapter. Remember changes yourself, then restart app</string>
    <string name="edit_bartitle">Edit Object</string>
    <string name="edit_addcust">Add Custom Image</string>
    <string name="edit_savebutt">Save</string>
    <string name="edit_upload">Upload Images</string>
    <string name="back">Back</string>
    <string name="edit_addq">Add Query</string>
    <string name="main_obj_thumbnail">Thumbnail</string>
    <string name="query_item_remove">Remove</string>
    <string name="main_ip">IP</string>
    <string name="main_port">PORT</string>
    <string name="query_more_count">Count</string>
    <string name="edit_svresperr"><![CDATA[Error occurred when contacting server. Try to request < 50 images.]]></string>
    <string name="edit_err_item_load">Some item has failed to display, removing it…</string>
    <string name="edit_err_save">Error occurred when contacting server.</string>
    <string name="edit_err_noquer">There is no queries</string>
    <string name="artobj_started">Training since %s</string>
    <string name="main_meta">%d images</string>
    <string name="main_op_train">Train</string>
    <string name="main_serverip">Server IP</string>
    <string name="edit_custq">Uploaded by User</string>
    <string name="edit_saving">Saving, please wait</string>
    <string name="results_error">Error: Parceable not transferred</string>
    <string name="query_thumb_nores">No Images</string>
    <string name="mark_title">Select Object(s)</string>
    <string name="mark_exit">Are you sure to cancel marking?</string>
    <string name="delete">Delete</string>
    <string name="mark_delete">Delete image</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="mark_loading">Loading image…</string>
    <string name="mark_troubleRm">Trouble with loading image, removing it..</string>
    <string name="mark_deleteall">Remove all</string>
    <string name="mark_trouble">Trouble with loading this image</string>
    <string name="edit_marking">Would you like to mark data now?</string>
    <string name="mark_remove">Remove mark</string>
    <string name="results_mark">Mark data</string>
    <string name="artobj_status_notmarked">Has unmarked images</string>
</resources>
